CMAKE_MINIMUM_REQUIRED(VERSION 3.14)
PROJECT(cxxEpub)

IF (SJR_OS_ANDROID)
    ADD_DEFINITIONS(-Werror -Wall -Wextra -Wno-format-security)
    ADD_DEFINITIONS(-D__ANDROID_API__=19)
    ADD_DEFINITIONS(-D_OS_ANDROID)

    SET(SYSTEM_LIB "")
    SET(CMAKE_STATIC_LINKER_FLAGS "${SYSTEM_LIB}")
ELSEIF (SJR_OS_LINUX)
    ADD_DEFINITIONS(-Werror -Wall -Wextra -Wno-format-security)
    ADD_DEFINITIONS(-D_OS_LINUX)

    SET(SYSTEM_LIB "")

    SET(CMAKE_STATIC_LINKER_FLAGS "${SYSTEM_LIB}")
ELSEIF (SJR_OS_WINDOWS)
    SET(CMAKE_CXX_STANDARD 17)
    ADD_DEFINITIONS(-Werror -Wall -Wextra -Wno-format-security)
    ADD_DEFINITIONS(-D_CRT_SECURE_NO_WARNINGS)
    ADD_DEFINITIONS(-D_OS_WINDOWS)

    SET(SYSTEM_LIB "")

    SET(CMAKE_STATIC_LINKER_FLAGS "${SYSTEM_LIB}")
ENDIF ()

SET(CMAKE_EXECUTABLE_SUFFIX ".exe")
ADD_EXECUTABLE(cxxEpub main.cpp)
TARGET_LINK_LIBRARIES(cxxEpub ${THIRD_LIB} ${SYSTEM_LIB})